# SimLink

./: .gitignore  CMakeLists.txt  README.md  build.bat  version.json
assets/: logo.icns
inc/: EventMapper.h  SimLink.h  util.h
inc/comm/: CommManager.h  NetworkDevice.h  SerialDevice.h
inc/conf/: Configuration.h  ConfigurationTypedef.h  Devices.h  Mappings.h  Simulator.h
inc/iface/: LuaInterface.h
inc/simconnect/: SimConnect.h  SimConnectDataReceiver.h  SimConnectHandler.h  SimConnectNotificationReceiver.h
inc/xp/: xplane.h  xpnetconn.h
lib/include/: base64.h  httplib.h
sample-scripts/: minimal.lua
src/: AppIcon.rc  EventMapper.cpp  SimLink.cpp
src/comm/: CommManager.cpp  NetworkDevice.cpp  SerialDevice.cpp
src/conf/: Configuration.cpp  ConfigurationTypedef.cpp  Devices.cpp  Mappings.cpp  Simulator.cpp
src/iface/: LuaInterface.cpp
src/simconnect/: SimConnectDataReceiver.cpp  SimConnectHandler.cpp  SimConnectNotificationReceiver.cpp
src/xp/: xplane.cpp  xpnetconn.cpp
